# openet-ssebop

./: .gitignore  .travis.yml  CONTRIBUTING.rst  MANIFEST.in  README.rst  example.ipynb  gridc.ipynb  gridc_mf_testing_toplevel.ipynb  pyproject.toml  requirements.txt  requirements_test.txt  setup.py  test.py
.github/workflows/: build.yml  pythonapp.yml  tests.yml
assets/: dt_cimis.ini  dt_cleanup_daily_image.py  dt_export_daily_image.py  dt_gridmet.ini  tmax_climo_ee_asset.py  tmax_median_ee_asset.py  utils.py
examples/: api_call.ipynb  collection.ipynb  collection_interpolate.ipynb  collection_interpolate_error_testing.ipynb  collection_overpass.ipynb  elr_testing.ipynb  image_mapping.ipynb  image_test_output.ipynb  interpolate.ipynb  single_image.ipynb  tcorr_gridded.ipynb  test.py
openet/ssebop/: __init__.py  collection.py  gridded_c_testbed.ipynb  image.py  interpolate.py  ipytest.py  landsat.py  model.py  utils.py
openet/ssebop/tests/: conftest.py  test_a_utils.py  test_b_landsat.py  test_b_model.py  test_c_image.py  test_collection.py  test_d_collection.py  test_d_interpolate.py  test_image.py  test_model.py  test_utils.py
tcorr/: cancel_tasks.py  export_tcorr_image.ipynb  image_from_feature.ipynb  tcorr_cleanup_daily_image.py  tcorr_export_annual_from_daily.py  tcorr_export_daily_image.ipynb  tcorr_export_daily_image.py  tcorr_export_default_asset.py  tcorr_export_default_from_daily.py  tcorr_export_monthly_calculate.py  tcorr_export_monthly_from_daily.py  tcorr_export_monthly_image.py  tcorr_export_scene_image.py  tcorr_feature_2_image.ipynb  tcorr_image_properties.ipynb  tcorr_realtime_stats.py  tcorr_rt_test.py  utils.py
tcorr/ini/: tcorr_daymet_median_v2.ini  tcorr_daymet_v2.ini  tcorr_topowx_median_v0.ini
tcorr_gridded/: gridc.ipynb  gridc_mf_testing.ipynb  gridc_mf_testing_toplevel.ipynb  process_testing.ipynb  readme.txt  tcorr_export_annual.py  tcorr_export_monthly.py  tcorr_export_scene_by_date.py  tcorr_export_scene_by_wrs2.py  tcorr_process_testing.ipynb  utils.py
tcorr_gridded/ini/: tcorr_daymet_median_v2_gridded.ini  tcorr_daymet_median_v2_gridded_2009.ini  tcorr_daymet_median_v2_gridded_2010.ini  tcorr_daymet_median_v2_gridded_2011.ini  tcorr_daymet_median_v2_gridded_2012.ini  tcorr_daymet_median_v2_gridded_2013.ini  tcorr_daymet_median_v2_gridded_2014.ini  tcorr_daymet_median_v2_gridded_2015.ini  tcorr_daymet_median_v2_gridded_2016.ini  tcorr_daymet_median_v2_gridded_2017.ini  tcorr_daymet_median_v2_gridded_2018.ini  tcorr_daymet_median_v2_gridded_2019.ini  tcorr_daymet_median_v2_gridded_2020.ini  tcorr_daymet_v3.ini  tcorr_daymet_v3_median_gridded.ini  tcorr_daymet_v4.ini  tcorr_daymet_v4_1kmTesting.ini  tcorr_daymet_v4_2013.ini  tcorr_daymet_v4_2016.ini  tcorr_daymet_v4_2017.ini  tcorr_daymet_v4_2018.ini  tcorr_daymet_v4_2019.ini  tcorr_daymet_v4_2020.ini  tcorr_daymet_v4_LCRB.ini  tcorr_daymet_v4_klamath.ini  tcorr_daymet_v4_mean_gridded.ini  tcorr_daymet_v4_median_gridded.ini  tcorr_daymet_v4_monthly.ini  tcorr_daymet_v4_monthly_LCRB.ini  tcorr_daymet_v4_ucrb.ini
tcorr_gridded/tcorr_gridded_assets/: main.py  requirements.txt
tcorr_image/: cancel_tasks.py  tcorr_cleanup_daily_image.py  tcorr_export_annual_from_daily.py  tcorr_export_daily_image.py  tcorr_export_default_from_daily.py  tcorr_export_monthly_calculate.py  tcorr_export_monthly_from_daily.py  tcorr_feature_2_image.ipynb  tcorr_image_properties.ipynb  tcorr_realtime_stats.py  utils.py
tcorr_image/ini/: tcorr_daymet_median_v2.ini  tcorr_topowx_median_v0.ini
tcorr_scene/: readme.txt  tcorr_export_annual_calculate.py  tcorr_export_annual_from_scene.py  tcorr_export_default.py  tcorr_export_default_from_scene.py  tcorr_export_monthly_calculate.py  tcorr_export_monthly_from_scene.py  tcorr_export_scene_by_date.py  tcorr_export_scene_by_wrs2.py  tcorr_export_scene_image.py  utils.py
tcorr_scene/functions/: main.py  requirements.txt
tcorr_scene/ini/: tcorr_daymet_median_v2.ini  tcorr_daymet_median_v2_2013.ini  tcorr_daymet_median_v2_2014.ini  tcorr_daymet_median_v2_2015.ini  tcorr_daymet_median_v2_2016.ini  tcorr_daymet_median_v2_2017.ini  tcorr_daymet_median_v2_2018.ini  tcorr_daymet_median_v2_2019.ini  tcorr_daymet_median_v2_default.ini  tcorr_daymet_median_v2_intercomparison.ini  tcorr_daymet_median_v2_monthly.ini
