[project]
name = "openet-ssebop"
version = "0.3.0"
authors = [
  { name = "Gabe Parrish", email = "gparrish@contractor.usgs.gov" },
  { name = "Mac Friedrichs", email = "mfriedrichs@contractor.usgs.gov" },
  { name = "Gabriel Senay", email = "senay@usgs.gov" },
]
# maintainers = [
#   { name = "Gabe Parrish", email = "gparrish@contractor.usgs.gov" }
# ]
description = "Earth Engine based SSEBop Model"
readme = "README.rst"
requires-python = ">=3.7"
keywords = ["SSEBop", "OpenET", "Earth Engine", "evapotranspiration"]
license = {file = "LICENSE.txt"}
# license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "earthengine-api>=0.1.364",
    "openet-core>=0.1.1",
    "openet-refet-gee>=0.2.0",
    "python-dateutil",
    "importlib-metadata; python_version <= '3.7'",
]

[project.urls]
"Homepage" = "https://github.com/Open-ET/openet-ssebop"
# "Repository" = "https://github.com/Open-ET/openet-ssebop.git"
# "Documentation" = "https://github.com/Open-ET/openet-ssebop"
# "Bug Tracker" = "https://github.com/Open-ET/openet-ssebop"
# "Changelog" = "https://github.com/Open-ET/openet-ssebop"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
# include = ["openet*"]
exclude = ["docs*", "examples*", "assets*", "tcorr_*"]
