[project]
name = "openet-ssebop"
version = "0.4.2"
authors = [
    { name = "Gabe Parrish", email = "gparrish@contractor.usgs.gov" },
    { name = "Mac Friedrichs", email = "mfriedrichs@contractor.usgs.gov" },
    { name = "Gabriel Senay", email = "senay@usgs.gov" },
]
maintainers = [
    { name = "Charles Morton", email = "charles.morton@dri.edu" }
]
description = "Earth Engine implementation of the SSEBop model"
readme = "README.rst"
requires-python = ">=3.8"
keywords = ["SSEBop", "OpenET", "Earth Engine", "Evapotranspiration", "Landsat"]
license = { file = "LICENSE.txt" }
# license = {text = "Apache-2.0"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
dependencies = [
    "earthengine-api >= 0.1.364",
    "openet-core >= 0.4.0",
    "openet-refet-gee >= 0.6.2",
    "python-dateutil",
]

[project.urls]
"Homepage" = "https://github.com/Open-ET/openet-ssebop"
# "Repository" = "https://github.com/Open-ET/openet-ssebop.git"
# "Documentation" = "https://github.com/Open-ET/openet-ssebop"
# "Bug Tracker" = "https://github.com/Open-ET/openet-ssebop"
# "Changelog" = "https://github.com/Open-ET/openet-ssebop"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
test = ["pytest"]

[tool.setuptools.packages.find]
# include = ["openet*"]
exclude = ["docs*", "examples*", "assets*"]
